--- a/AssignmentSecond/SmokeTest.html
+++ b/AssignmentSecond/SmokeTest.html
@@ -1,15 +1,15 @@
 
 Running tests... 
 ----------------------------------------------------------------------
- test_Google (AssignmentSecond.TestCaseFirst.TestOpeningGoogle) ... OK (19.466011)s
- test_FacebookTest (AssignmentSecond.LoadYoutube.LaunchFacebook) ... OK (16.373083)s
- test_FacebookTest_correct (AssignmentSecond.LoadYoutube.LaunchFacebook) ... ERROR (15.194160)s
+ test_Google (AssignmentSecond.TestCaseFirst.TestOpeningGoogle) ... OK (31.186880)s
+ test_FacebookTest_fail (AssignmentSecond.LoadYoutube.LaunchFacebook) ... ERROR (20.409881)s
+ test_FacebookTest_pass (AssignmentSecond.LoadYoutube.LaunchFacebook) ... OK (39.431797)s
 
 ======================================================================
-ERROR [15.194160s]: AssignmentSecond.LoadYoutube.LaunchFacebook.test_FacebookTest_correct
+ERROR [20.409881s]: AssignmentSecond.LoadYoutube.LaunchFacebook.test_FacebookTest_fail
 ----------------------------------------------------------------------
 Traceback (most recent call last):
-  File "E:\workspace\webAutomationSelenium\AssignmentSecond\LoadYoutube.py", line 35, in test_FacebookTest_correct
+  File "E:\workspace\webAutomationSelenium\AssignmentSecond\LoadYoutube.py", line 65, in test_FacebookTest_fail
     password = driver.find_element_by_id("pas")  # ("pass")
   File "C:\Anaconda\Anaconda3\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 360, in find_element_by_id
     return self.find_element(by=By.ID, value=id_)
@@ -20,15 +20,15 @@ Traceback (most recent call last):
   File "C:\Anaconda\Anaconda3\lib\site-packages\selenium\webdriver\remote\errorhandler.py", line 242, in check_response
     raise exception_class(message, screen, stacktrace)
 selenium.common.exceptions.NoSuchElementException: Message: no such element: Unable to locate element: {"method":"css selector","selector":"[id="pas"]"}
-  (Session info: chrome=80.0.3987.163)
+  (Session info: chrome=83.0.4103.61)
 
 
 ----------------------------------------------------------------------
-Ran 3 tests in 0:00:51
+Ran 3 tests in 0:01:31
 
 FAILED
  (Errors=1)
 
 Generating HTML reports... 
-reports\TestResults_AssignmentSecond.TestCaseFirst.TestOpeningGoogle_2020-04-17_11-02-53.html
-reports\TestResults_AssignmentSecond.LoadYoutube.LaunchFacebook_2020-04-17_11-02-53.html
+reports\TestResults_AssignmentSecond.TestCaseFirst.TestOpeningGoogle_2020-05-31_10-38-11.html
+reports\TestResults_AssignmentSecond.LoadYoutube.LaunchFacebook_2020-05-31_10-38-11.html
